Update z-index of nav bar to fix overlapping issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ header {
     top: 0px;
     width: 100%;
     height: 3.75rem;
-    z-index: 2;
+    z-index: 5;
 }
 
 nav {
